--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/cloudflare": "^12.5.3",
+    "@astrojs/cloudflare": "~12.5.3",
     "@astrojs/react": "^4.2.3",
     "@astrojs/tailwind": "^6.0.2",
     "@hello-pangea/dnd": "^18.0.1",
@@ -51,21 +51,23 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.13",
-    "@wix/astro": "1.0.33",
+    "@wix/astro": "1.0.36",
     "@wix/auto-patterns": "1.17.0",
-    "@wix/babel-plugin-jsx-dynamic-data": "^1.0.9",
+    "@wix/babel-plugin-jsx-dynamic-data": "^1.0.11",
     "@wix/babel-plugin-jsx-source-attrs": "^1.2.0",
     "@wix/benefit-programs": "^1.0.121",
-    "@wix/blog": "^1.0.489",
+    "@wix/blog": "^1.0.497",
     "@wix/bookings": "^1.0.1071",
     "@wix/categories": "^1.0.133",
+    "@wix/cloud-provider-fetch-adapter": "~1.0.1",
     "@wix/dashboard": "^1.3.39",
-    "@wix/data": "^1.0.250",
+    "@wix/data": "^1.0.318",
     "@wix/design-system": "^1.199.0",
     "@wix/ecom": "^1.0.1405",
     "@wix/essentials": "^0.1.24",
-    "@wix/events": "^1.0.640",
-    "@wix/forms": "^1.0.328",
+    "@wix/events": "^1.0.652",
+    "@wix/faq": "^1.0.30",
+    "@wix/forms": "^1.0.335",
     "@wix/headless-components": "^0.0.17",
     "@wix/image": "^1.392.0",
     "@wix/image-kit": "^1.0.0",
@@ -97,6 +99,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "publish": "^0.6.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.59.0",
     "react-leaflet": "^5.0.0",
@@ -113,7 +116,6 @@
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.4",
-    "@wix/faq": "^1.0.30",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -124,7 +126,7 @@
     "@types/three": "^0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
-    "@wix/cli": "^1.1.115",
+    "@wix/cli": "^1.1.122",
     "csstype": "^3.1.3",
     "eslint": "^9.26.0",
     "eslint-plugin-astro": "^1.3.1",
